--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -36,12 +36,28 @@ jobs:
       with:
         arguments: build
 
-    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-    # the publishing section of your build.gradle
-    - name: Publish to GitHub Packages
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+    - name: App Center
+      # You may pin to the exact commit or the version.
+      # uses: wzieba/AppCenter-Github-Action@650c903ea6a81c71e011b0a303ae555f2dbf76a0
+      uses: wzieba/AppCenter-Github-Action@v1.3.3
       with:
-        arguments: publish
-      env:
-        USERNAME: ${{ github.actor }}
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # App name followed by username e.g. wzieba/Sample-App
+        appName: videla/CalculatorApp
+        # Upload token - you can get one from appcenter.ms/settings
+        token: 77086fa36b5af42235aad3dcd96968eaefc0ed35
+        # Distribution group
+        group: "Beta Testers"
+        # Artefact to upload (.apk or .ipa)
+        file: ${{ github.workspace }}
+        # Build version parameter required for .zip, .msi, .pkg and .dmg files
+        buildVersion: # optional
+        # Build number parameter required for macOS .pkg and .dmg files
+        buildNumber: # optional
+        # Release notes visible on release page
+        releaseNotes: # optional
+        # Generate release notes based on the latest git commit
+        gitReleaseNotes: # optional
+        # If true, send an email notification to the distribution group
+        notifyTesters: # optional
+        # If true, shows additional information from the action execution
+        debug: # optional
