--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.calculatorv2"
-        minSdk 32
+        minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -48,6 +48,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.microsoft.appcenter:espresso-test-extension:1.4'
 }
 
 dependencies {
